syntax="proto3";

package  Protos.RoomRegistration;

message RoomRegistrationRequestMsgDef
{
    string room_name = 1;
    string user_name = 2;
}

message RoomRegistrationResponseMsgDef
{
    bool joined = 1;
}




